--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@feathersjs/express": "^1.2.3",
     "@feathersjs/feathers": "^3.1.7",
     "@feathersjs/socketio": "^3.2.2",
+    "chai": "^4.1.2",
+    "chai-http": "^4.2.0",
     "compression": "^1.7.3",
     "cors": "^2.8.4",
     "feathers-nedb": "^3.1.0",
